Making fetch persons work with frontend

--- a/Part_3/phonebook_backend/package.json
+++ b/Part_3/phonebook_backend/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ycarotrindade/Full-Stack-Open-Exercises#readme",
   "dependencies": {
+    "cors": "^2.8.6",
     "express": "^5.2.1",
     "morgan": "^1.10.1"
   }
